--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
@@ -21,7 +22,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "/plataform",
+  "homepage": "/login",
   "browserslist": {
     "production": [
       ">0.2%",
